tests/errors/arguments/types/invalid_type_02.src
.IPPcode18
read GF@var STRING